<resources>

    <string name="app_name">Siu Guarani</string>

    <!--> Nombre campos <-->
    <string name="usuario_campo">Usuario</string>
    <string name="contrasenia_campo">Contraseña</string>
    <string name="alumno_campo">Alumno</string>
    <string name="fecha_campo">Fecha</string>
    <string name="legajo_campo">Legajo</string>

    <!--> Buttons <-->
    <string name="login_button">Continuar</string>
    <string name="anotar_button">Anotarme</string>

    <!--> Titulos <-->
    <string name="seleccioneCarrera_titulo">Seleccione Carrera</string>
    <string name="materias_titulo">Materias</string>
    <string name="iniciarsesion_titulo">Iniciar Sesion</string>
    <string name="inscripcion_titulo">Inscripción</string>
    <string name="desinscripcion_titulo">Desinscripción</string>

    <string name="confirmar_titulo">Confirmar Inscripcion</string>
    <string name="confirmar_mensaje">¿Desea inscribirse en esta materia?</string>
    <string name="confirmar_confirmacion">Inscripto</string>

    <string name="confirmar_titulo2">Confirmar Desinscripcion</string>
    <string name="confirmar_mensaje2">¿Desea anular la inscripción en esta materia?</string>
    <string name="confirmar_confirmacion2">Desinscripto</string>

    <!--> Mensajes de error <-->
    <string name="exceptionIO">Error de IO</string>

    <!--> Array para el spinner <-->
    <string-array name="arraySpinner">
        <item>Regular</item>
        <item>Libre</item>
    </string-array>


</resources>
