<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:background="@color/colorBlanco"
    tools:context="com.example.nicoc.scraping_guarani.Login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <include
            android:id="@+id/include"
            layout="@layout/footer"
            tools:layout_editor_absoluteX="53dp"
            tools:layout_editor_absoluteY="58dp" />

        <ImageView
            android:id="@+id/imageLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/txtUsername"
            android:layout_alignLeft="@+id/txtUsername"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/txtUsername"
            android:layout_alignStart="@+id/txtUsername"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="47dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/iniciarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageLabel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp"
            android:fontFamily="cursive"
            android:text="@string/iniciarsesion_titulo"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtPassword"
            android:layout_alignStart="@+id/txtPassword"
            android:layout_below="@+id/iniciarSesion"
            android:layout_marginTop="17dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/usuario_campo"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/colorNegro"
            android:textSize="18sp"
            android:typeface="sans"
            android:visibility="visible"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="64dp" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtUsername"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/contrasenia_campo"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/colorNegro"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/txtPassword"
            android:layout_alignLeft="@+id/txtPassword"
            android:layout_alignRight="@+id/txtPassword"
            android:layout_alignStart="@+id/txtPassword"
            android:layout_below="@+id/checkBoxRememberMe"
            android:layout_marginTop="19dp"
            android:background="@color/colorPrimary"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:textColor="@color/colorBlanco"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <CheckBox
            android:id="@+id/checkBoxRememberMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/btnLogin"
            android:layout_alignLeft="@+id/btnLogin"
            android:layout_alignRight="@+id/btnLogin"
            android:layout_alignStart="@+id/btnLogin"
            android:layout_below="@+id/txtPassword"
            android:layout_marginTop="13dp"
            android:checked="false"
            android:text="Recordarme" />
    </RelativeLayout>
</ScrollView>