<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:background="@color/colorBlanco"
    tools:context="com.example.nicoc.scraping_guarani.Alumno.AlumnoActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="71dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="0.13"
                    android:fontFamily="sans-serif"
                    android:text="@string/alumno_campo"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:typeface="sans" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblAlumno"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/alumno_campo"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:typeface="sans"
                    tools:text="@string/alumno_campo" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:orientation="vertical"
            android:layout_below="@+id/linearLayout2"
            android:id="@+id/linearLayout8">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linearLayout2"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textLegajo"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/legajo_campo"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/lblLegajo"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:layout_weight="0.56"
                    android:text="@string/legajo_campo"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:typeface="sans"
                    tools:text="Legajo" />

                <TextView
                    android:id="@+id/textFecha"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/fecha_campo"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/lblFecha"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/linearLayout"
                    android:layout_weight="0.25"
                    android:fontFamily="sans-serif"
                    android:text="@string/fecha_campo"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:typeface="sans"
                    tools:text="Fecha" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout8"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonMesas"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout8"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="Ver mesas"
                android:textAllCaps="false"
                android:textColor="@color/colorBlanco"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="sans" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_above="@+id/include"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <fragment
                android:id="@+id/fragmentListadoProductos"
                android:name="com.example.nicoc.scraping_guarani.Alumno.ListadoMesasFragment.ListadoMesasFragment"
                android:layout_width="366dp"
                android:layout_height="360dp"
                android:layout_above="@+id/include"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linearLayout8"
                android:layout_marginTop="58dp" />
        </LinearLayout>

        <include
            android:id="@+id/include"
            layout="@layout/footer"
            tools:layout_editor_absoluteX="53dp"
            tools:layout_editor_absoluteY="58dp" />


    </RelativeLayout>
</ScrollView>